@@ -3,13 +3,13 @@ GLOBALS = globals()
 PROJECTNAME = "collective.geo.contentlocations"
 
 GEO_STYLE_FIELDS = ['use_custom_styles',
-                    'map_viewlet_position',
-                    'map_width',
-                    'map_height',
-                    'linecolor',
-                    'linewidth',
-                    'polygoncolor',
                     'marker_image',
+                    'map_viewlet_position',
                     'marker_image_size',
-                    'display_properties'
+                    'map_width',
+                    'linecolor',
+                    'map_height',
+                    'polygoncolor',
+                    'display_properties',
+                    'linewidth',
                    ]
